# natsapi

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  flake.nix  pyproject.toml  shell.nix
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yaml  feature_request.yaml
.github/workflows/: codeql-analysis.yml  test.yaml
benchmarks/: Makefile  README.md  backend-nats.py  backend-rest.py  docker-compose.yml  frontend-gateway.py  input.json
examples/: client.py  event_decorators.py  full_with_reload.py  minimal.py  with_fastapi.py
natsapi/: __init__.py  _compat.py  applications.py  context.py  encoders.py  enums.py  exception_handlers.py  exceptions.py  logger.py  models.py  plugin.py  reload.py  routing.py  state.py  types.py  utils.py
natsapi/asyncapi/: __init__.py  constants.py  models.py  utils.py
natsapi/client/: __init__.py  client.py  config.py
render-asyncapi/: go.mod  main.go  redoc.asyncapi.js
tests/: fixtures.py  test_applications.py  test_config.py  test_exceptions.py  test_fastapi.py  test_jsonable_encoder.py  test_method_type_conversion.py  test_models.py  test_publish.py  test_reload.py  test_requests.py  test_routing.py
tests/asyncapi/: test_generation.py  test_models.py
tests/plugins/: test_mock.py
