[tool.poetry]
name = "natsapi"
version = "0.1.2"
description = "A Python microservice framework that speaks nats.io with asyncapi spec generation capability"
authors = ["WeGroup NV <it@wegroup.be>"]
readme = "README.md"
license = "MIT"
homepage =  "https://github.com/wegroupwolves/natsapi"
repository =  "https://github.com/wegroupwolves/natsapi"

[tool.poetry.urls]
Pypi = "https://pypi.org/project/natsapi/"

[tool.poetry.build]
generate-setup-file = false

[tool.poetry.dependencies]
python = "^3.10"
pydantic = ">=1.7.4,!=1.8,!=1.8.1,!=2.0.0,!=2.0.1,!=2.1.0,<3.0.0"
nats-py = {extras = ["nkeys"], version = ">=2.2.0"}
pydantic-settings = ">=2.8.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.6.0"

[tool.poetry.group.test.dependencies]
black = "^26.3.1"
bandit = "^1.9.4"
piprot = "^0.9.11"
safety = "^3.7.0"
pytest-asyncio = "^1.3.0"
vulture = "^2.16"
ruff = "^0.15.11"
coverage = "^7.13.5"


[tool.poetry.plugins."pytest11"]
natsapi = "natsapi.plugin"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "tests"
]

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
exclude = ["scripts"]
target-version = "py310"

[tool.ruff.lint]
extend-select = ["C90", "I", "B", "Q", "UP", "S", "COM", "C4", "T10", "SIM", "TID", "PTH", "ERA"]
ignore = ["S101", "B017", "UP007", "UP008", "B006", "C408"]

[tool.ruff.lint.mccabe]
max-complexity = 25

[tool.black]
line-length = 120

[tool.coverage.report]
omit=["**/site-packages/**"]
